--- a/config/item_config.json
+++ b/config/item_config.json
@@ -250,7 +250,47 @@
             "Tome of Greater Experience",
             "Tome of Lesser Experience",
             "Tome of Naivety",
-            "Tome of Unlearning"
+            "Tome of Unlearning",
+            "Agility Stone",
+            "Angela's Tear",
+            "Blightwood Log",
+            "Blightwood Stick",
+            "Blue Minchroom Cap",
+            "Bronze Arrows",
+            "Carbuncle Foot",
+            "Cursed Note",
+            "Deadwood Log",
+            "Deathgel Core",
+            "Diva Necklace",
+            "Flux Stone",
+            "Geist Collar",
+            "Ghostdust",
+            "Golem Core",
+            "Golem Gem",
+            "Green Lipstick",
+            "Hellsludge Core",
+            "Illusion Stone",
+            "Maw Eye",
+            "Mekboar Head",
+            "Mekboar Spear",
+            "Might Stone",
+            "Monolith Core",
+            "Monolith Gem",
+            "Mouth Bittertooth",
+            "Mouth Eye",
+            "Rageboar Head",
+            "Rageboar Spear",
+            "Red Minchroom Cap",
+            "Rock",
+            "Slime Core",
+            "Slime Diva Ears",
+            "Slime Ears",
+            "Slimek Core",
+            "Slimek Ears",
+            "Slimek Eye",
+            "Soul Pearl",
+            "Wizboar Head",
+            "Wizboar Scepter"
         ]
     }
 }
